--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,109 @@
 body{
-    background-color: #D779AD;
-    color: #123;
-    margin:0
+    background-image: url("/img/fondo.png");
+    background-attachment: fixed;
+    background-color: #f7f9fD;
+    margin:0;
+    padding: 1em;
+    font-family: Ubuntu;
+}
+header, footer, section{
+    max-width: 1680px;
+    margin:auto
+}
+                                /*  header  */
+header{
+    background-color: #95ECF5aa;
+    backdrop-filter: blur(6px);
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #95ECF5;
+    padding: 1em;
+    display: flex;
+    box-shadow:-.1em 0.1em 1em #72AEB8;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.logo{
+    display: flex;
+}
 
-header, footer{
+.imgLogo{
+    width: 100%;
+    max-width:128px;
+    margin: auto;
+}
+
+h1{
+    font-family: 'Ubuntu Mono';
+    text-shadow: -0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+    font-size: 4em;
+    font-weight: 400;
+    padding-left: .6rem;
+}
+
+nav{
+    font-size: 1.2em;
+}
+
+                                /*   section  */
+section{
+    background-color: #fff9ffaa;
+    backdrop-filter: blur(5px);
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #fff9ff;
+    margin-top: 1em;
+    box-shadow:-.1em 0.1em 1em #9c8b9caa;
+}
+
+h2{
+    font-size: 2em;
+    text-align: center;
+    font-family: 'Ubuntu Mono';
+    text-shadow: -0.1em 0.1em 0.3em rgba(0, 0, 0, 0.5);
+}
+
+.sabores, .decoraciones{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items:stretch
+}
+
+.card{
+    margin: 1em;
+    background-color: #fff9ff;
+    border-radius: 1em;
+    box-shadow:-.1em 0.1em 1em #9c8b9caa;
+    padding: 1em;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.2em;
+    max-width: 256px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+}
+
+.imgCard{
+    max-width:100%;
+    margin: 1em;
+}
+
+.card > p{
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0px;
+}
+
+.card > .precio{
+    font-weight: bold;
+}
+
+afooter{
     text-align:center;
-    background-color: #6bb5ff;
+    background-color: #6bb5ff;  
     text-align: center;
     overflow:hidden
 }
@@ -21,14 +117,7 @@ tr, th, caption{
 caption{
     background-color: #abf561;
 }
-nav{
-    float:inline-end
-}
 
-.container{
-    display: flex;
-    justify-content:space-evenly;
-}
 table{
     flex-wrap: wrap;
     border: #abf561;
@@ -45,12 +134,6 @@ td{
     border-style:solid
 }
 
-.Logo{
-    width:64px;
-    float:left;
-    margin:1em
-}
-
 caption{
     font-size: 1.5em;
     font-weight: bolder;
@@ -60,32 +143,10 @@ caption{
     height: 120px;
     
 }
-.texto{
-    height: 99px;
-    
-}
-
-h1{
-    color: #c5ff7a ;
-    font-weight: bolder;
-    font-family: Helvetica;
-    text-shadow: -0.1em 0.1em 0.2em rgba(171, 255, 102, 0.25);
-    font-size: 3em;
-    float:left ;
-}
-
-h2{
-    text-align: center;
-}
 
 
 
-div{
-    text-align: center;  
-    flex-wrap: wrap;
-    padding: 10px;
-}
- ul{
+ul{
     list-style: none;
     display:flex;  
  }
@@ -94,3 +155,30 @@ div{
      margin-left: .6em;
      margin-right: .6em;
  }
+
+ @media (max-width: 650px) {
+    h1 {
+      font-size: 3em;
+    }
+
+    .logo{
+        flex-wrap: nowrapa;
+    }
+    .imgLogo{
+        max-width: 96px;
+    }
+  }
+
+
+ @media (max-width: 550px) {
+    h1 {
+      display: none;
+    }
+
+    .logo{
+        flex-wrap: nowrapa;
+    }
+    .imgLogo{
+        max-width: 80px;
+    }
+  }
